Provide lsp edit symbol
Signed-off-by: azerr <azerr@redhat.com>